--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 # requirements.txt
 
-streamlit
+streamlit==1.12.2
+opencv-python-headless==4.6.0.66
+#streamlit
+#opencv-python==4.7.0.72
 numpy
 pandas
 feat
 keras
 matplotlib
-opencv-python==4.7.0.72
 Pillow
 requests
 torchvision
 tensorflow>=2.0.0
+
